package model;

import java.time.LocalDate;
import java.util.HashMap;
import java.util.Map;
import java.util.Objects;

/**
 * For each individual, the system must record their full name,
 * current title (e.g., Manager, Specialist), hire date,
 * and current salary.
 * Crucially, every single member of the workforce must be
 * permanently assigned to one, and only one, organizational unit.
 */
public class Employee {
    private Integer id;
    private String fullName;
    private String title;
    private LocalDate hireDate;
    private Double salary;
    private Department department;
    private final Map<Project, Integer> projectAllocationPercentages = new HashMap<>();

    public Employee() {
    }

    // region Getters and Setters

    public Integer getId() {
        return id;
    }

    public void setId(Integer id) {
        this.id = id;
    }

    public String getFullName() {
        return fullName;
    }

    public void setFullName(String fullName) {
        this.fullName = fullName;
    }

    public String getTitle() {
        return title;
    }

    public void setTitle(String title) {
        this.title = title;
    }

    public LocalDate getHireDate() {
        return hireDate;
    }

    public void setHireDate(LocalDate hireDate) {
        this.hireDate = hireDate;
    }

    public Double getSalary() {
        return salary;
    }

    public void setSalary(Double salary) {
        this.salary = salary;
    }

    public Department getDepartment() {
        return department;
    }

    public void setDepartment(Department department) {
        this.department = department;
    }

    public Map<Project, Integer> getProjectAllocationPercentages() {
        return projectAllocationPercentages;
    }

    // endregion Getters and Setters

    // region Overridden Methods

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        Employee employee = (Employee) o;
        return Objects.equals(id, employee.id);
    }

    @Override
    public int hashCode() {
        return Objects.hash(id);
    }

    // endregion Overridden Methods
}