package model;

public enum ProjectStatus {
    ACTIVE,
    COMPLETED
}