@startuml EEMS_ClassDiagram

left to right direction
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classArrowColor #534AB7
skinparam classBackgroundColor #FFFFFF
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeCBorderColor #0F6E56
skinparam padding 5
skinparam nodesep 60
skinparam ranksep 80
skinparam ArrowFontSize 11

title EEMS — Employment Management System\nUML Class Diagram

' ─────────────────────────────────────────
'  CORE DOMAIN ENTITIES
' ─────────────────────────────────────────

class Department {
  - id              : Integer
  - name            : String
  - location        : String
  - annualBudget    : Double
  - projects        : List<Project>
  - employees       : List<Employee>
  --
  + getId()                                : Integer
  + setId(id : Integer)                    : void
  + getName()                              : String
  + setName(name : String)                 : void
  + getLocation()                          : String
  + setLocation(location : String)         : void
  + getAnnualBudget()                      : Double
  + setAnnualBudget(budget : Double)       : void
  + getProjects()                          : List<Project>
  + setProjects(projects : List<Project>)  : void
  + getEmployees()                         : List<Employee>
  + setEmployees(employees : List<Employee>) : void
  + equals(o : Object)                     : boolean
  + hashCode()                             : int
}

class Employee {
  - id                             : Integer
  - fullName                       : String
  - title                          : String
  - hireDate                       : LocalDate
  - salary                         : Double
  - department                     : Department
  - projectAllocationPercentages   : Map<Project, Integer>
  --
  + getId()                                : Integer
  + setId(id : Integer)                    : void
  + getFullName()                          : String
  + setFullName(name : String)             : void
  + getTitle()                             : String
  + setTitle(title : String)               : void
  + getHireDate()                          : LocalDate
  + setHireDate(date : LocalDate)          : void
  + getSalary()                            : Double
  + setSalary(salary : Double)             : void
  + getDepartment()                        : Department
  + setDepartment(dept : Department)       : void
  + getProjectAllocationPercentages()      : Map<Project, Integer>
  + equals(o : Object)                     : boolean
  + hashCode()                             : int
}

class Project {
  - id                     : Integer
  - name                   : String
  - description            : String
  - startDate              : LocalDate
  - endDate                : LocalDate
  - budget                 : Double
  - status                 : ProjectStatus
  - departments            : Set<Department>
  - employeeAllocations    : Map<Employee, Integer>
  - clients                : Set<Client>
  --
  + getId()                                            : Integer
  + setId(id : Integer)                                : void
  + getName()                                          : String
  + setName(name : String)                             : void
  + getDescription()                                   : String
  + setDescription(desc : String)                      : void
  + getStartDate()                                     : LocalDate
  + setStartDate(date : LocalDate)                     : void
  + getEndDate()                                       : LocalDate
  + setEndDate(date : LocalDate)                       : void
  + getBudget()                                        : Double
  + setBudget(budget : Double)                         : void
  + getStatus()                                        : ProjectStatus
  + setStatus(status : ProjectStatus)                  : void
  + getDepartments()                                   : Set<Department>
  + setDepartments(departments : Set<Department>)      : void
  + getEmployeeAllocations()                           : Map<Employee, Integer>
  + setEmployeeAllocations(m : Map<Employee, Integer>) : void
  + getClients()                                       : Set<Client>
  + setClients(clients : Set<Client>)                  : void
  + equals(o : Object)                                 : boolean
  + hashCode()                                         : int
}

class Client {
  - id                     : Integer
  - name                   : String
  - industry               : String
  - primaryContactName     : String
  - phone                  : String
  - email                  : String
  - projects               : Set<Project>
  --
  + getId()                                    : Integer
  + setId(id : Integer)                        : void
  + getName()                                  : String
  + setName(name : String)                     : void
  + getIndustry()                              : String
  + setIndustry(industry : String)             : void
  + getPrimaryContactName()                    : String
  + setPrimaryContactName(name : String)       : void
  + getPhone()                                 : String
  + setPhone(phone : String)                   : void
  + getEmail()                                 : String
  + setEmail(email : String)                   : void
  + getProjects()                              : Set<Project>
  + setProjects(projects : Set<Project>)       : void
  + equals(o : Object)                         : boolean
  + hashCode()                                 : int
}

enum ProjectStatus {
  ACTIVE
  COMPLETED
}

' ─────────────────────────────────────────
'  RELATIONSHIPS
' ─────────────────────────────────────────

' Department (1) employs Employee (0..*)
Department "1" *--> "0..*" Employee : employs >

' Department (0..*) <-> Project (0..*)   [M:N]
Department "0..*" --> "0..*" Project : manages >

' Employee (0..*) <-> Project (0..*) with allocation %   [M:N]
Employee "0..*" --> "0..*" Project : works on >

' Client (0..*) <-> Project (0..*)   [M:N]
Client "0..*" --> "0..*" Project : sponsors >

' Project status
Project --> ProjectStatus

@enduml
